<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>TomeeDeltasspike</artifactId>
        <groupId>org.waastad</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>org.waastad</groupId>
    <artifactId>TomeeDeltasspike-ear</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>ear</packaging>

    <name>TomeeDeltasspike-ear</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <version>6</version>
                    <defaultJavaBundleDir>lib/</defaultJavaBundleDir>
                    <skinnyWars>false</skinnyWars>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.openejb.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${tomee.version}</version>
                <configuration>
                    <config>src/main/tomee/conf</config>
                    <!-- <args>-XX:+PrintGCDetails -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:+PrintHeapAtGC</args>-->
                    <systemVariables>
                    </systemVariables>
                    <libs>
                        <lib>org.eclipse.persistence:eclipselink:2.5.1</lib>
                    </libs>
                    <tomeeVersion>${tomee.version}</tomeeVersion>
                    <tomeeClassifier>${tomee.classifier}</tomeeClassifier>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                    <synchronization>
                        <extensions>
                            <extension>.ear</extension>
                            <extension>.class</extension>
                            <extension>.xhtml</extension>
                            <extension>.js</extension>
                            <extension>.css</extension>
                        </extensions>
                    </synchronization>
                    <reloadOnUpdate>true</reloadOnUpdate>
                    <removeDefaultWebapps>false</removeDefaultWebapps>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.waastad</groupId>
            <artifactId>TomeeDeltasspike-ejb</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>ejb</type>
        </dependency>
        <dependency>
            <groupId>org.waastad</groupId>
            <artifactId>TomeeDeltasspike-web</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
    </dependencies>
</project>
